<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.henallux.dolphin_crenier_veys.view.ResAjoutActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BonMatch"
        android:id="@+id/textLabel"
        android:background="#ff6e19"
        android:textColor="#ffffff"
        android:textSize="22dp"
        android:gravity="center"
        android:padding="20dp"/>

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/txtRes1"
    android:id="@+id/resAjout1"
    android:layout_below="@+id/textLabel"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="51dp"
    android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/resAjout2"
        android:layout_below="@+id/resAjout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtRes2"
        android:id="@+id/resAjout3"
        android:layout_below="@+id/resAjout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/resAjout4"
        android:layout_below="@+id/resAjout3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtRes3"
        android:id="@+id/resAjout5"
        android:layout_below="@+id/resAjout4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/resAjout6"
        android:layout_below="@+id/resAjout5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp" />

</RelativeLayout>
