<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.henallux.dolphin_crenier_veys.view.RechActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recherche"
        android:id="@+id/labelRech"
        android:background="#0098ff"
        android:textColor="#ffffff"
        android:textSize="22dp"
        android:gravity="center"
        android:padding="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dateDeb"
        android:id="@+id/dateDeb"
        android:textSize="18dp"
        android:textStyle="bold"
        android:background="#cdcdcd"
        android:padding="20dp"
        android:layout_below="@id/labelRech"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/recupDateDeb"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="0.20"
        android:padding="15dp"
        android:layout_below="@id/dateDeb"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dateFin"
        android:id="@+id/dateFin"
        android:textSize="18dp"
        android:textStyle="bold"
        android:background="#cdcdcd"
        android:padding="20dp"
        android:layout_below="@id/recupDateDeb"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/recupDateFin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="0.20"
        android:padding="15dp"
        android:layout_below="@id/dateFin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recherche"
        android:id="@+id/buttonRech"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp" />

</RelativeLayout>
